--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>My first html page</h1>
-		<h3>created by Chris</h3>
+		<h3>created by <a href="C:/Users/chris/workspace/my-first-web-page/bio.html">Chris</a></h3>
 	</body>
 </html>
